--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fastclick": "^1.0.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "jsonp": "0.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
