--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
+    "better-scroll": "^1.15.2",
     "jsonp": "0.2.1"
   },
   "devDependencies": {
